src/test/ui/type-ascription.stderr
error[E0070]: invalid left-hand side of assignment
  --> $DIR/type-ascription.rs:38:16
   |
LL |     v: Vec<u8> = vec![1, 2, 3]; // Place expression type ascription
   |     ---------- ^
   |     |
   |     cannot assign to this expression

error: type ascriptions are not allowed in lvalue contexts
  --> $DIR/type-ascription.rs:17:16
   |
LL |     assert_eq!(C1.into(): i32, 10);
   |                ^^^^^^^^^^^^^^

error: type ascriptions are not allowed in lvalue contexts
  --> $DIR/type-ascription.rs:30:18
   |
LL |     assert_eq!(v[a.into(): usize], 2);
   |                  ^^^^^^^^^^^^^^^

error: type ascriptions are not allowed in lvalue contexts
  --> $DIR/type-ascription.rs:34:19
   |
LL |     assert_eq!(b, 1: u16);
   |                   ^^^^^^

error: type ascriptions are not allowed in lvalue contexts
  --> $DIR/type-ascription.rs:38:5
   |
LL |     v: Vec<u8> = vec![1, 2, 3]; // Place expression type ascription
   |     ^^^^^^^^^^

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0070`.
